package ca.yorku.smartbudget.domain;

public class Budget {
//    placeholder for future implementation
}
