package ca.yorku.smartbudget.domain;

public enum Category {
    BILLS_AND_UTILITIES,
    EDUCATION,
    ENTERTAINMENT,
    FOOD_AND_DINING,
    HEALTHCARE,
    SHOPPING,
    TRANSPORTATION,
    FREELANCE,
    INVESTMENT,
    SALARY,
    OTHER
}
