package ca.yorku.smartbudget.domain;

public enum TransactionType {
    INCOME,
    EXPENSE
}
