@startuml
title SmartBudget - Diagram A (Transactions: FR1 + FR2 / UC-1, UC-2, UC-3)

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam ranksep 120

package "UI Layer (Controller)" as UI {
  class TransactionsController {
    - transactionService : TransactionService
    - alertService : AlertService
    --
    + initialize() : void
    + onAddTransaction() : void
    + onEditTransaction(selectedId: UUID) : void
    + onDeleteTransaction(selectedId: UUID) : void
    + onFilterChanged(criteria: TransactionFilter) : void
    + onClearFilters() : void
    + onSearch(keyword: String) : void
    + refreshTable() : void
  }
}

package "Service Layer (Business Logic)\n" as SVC {
  class TransactionService {
    - storage : Storage
    - cache : List<Transaction>
    --
    + loadOnStartup() : void
    + getAll() : List<Transaction>
    + add(tx: Transaction) : Transaction
    + update(tx: Transaction) : Transaction
    + delete(id: UUID) : void
    + getById(id: UUID) : Transaction
    + filter(criteria: TransactionFilter) : List<Transaction>
    + persist() : void
  }

  ' Included because overspending can be checked after add/edit,
  ' but kept minimal here (full details in the Budget/Alerts diagram).
  class AlertService {
    + checkOverspendingFor(tx: Transaction) : Optional<OverspendingAlert>
  }
}

package "Domain Model (Entities + DTO)\n" as DOMAIN {

  enum Category {
    FOOD_AND_DINING
    TRANSPORTATION
    BILLS_AND_UTILITIES
    SHOPPING
    ENTERTAINMENT
    HEALTHCARE
    OTHER
  }

  enum TransactionType {
    INCOME
    EXPENSE
  }

  class Transaction {
    - id : UUID
    - type : TransactionType
    - amount : BigDecimal
    - date : LocalDate
    - category : Category
    - note : String
    --
    + Transaction(id: UUID, type: TransactionType, amount: BigDecimal, date: LocalDate, category: Category, note: String)
    + isIncome() : boolean
    + isExpense() : boolean
  }

  class TransactionFilter {
    - category : Category
    - type : TransactionType
    - startDate : LocalDate
    - endDate : LocalDate
    - keyword : String
    --
    + TransactionFilter(category: Category, type: TransactionType, startDate: LocalDate, endDate: LocalDate, keyword: String)
    + isEmpty() : boolean
  }

  ' Minimal placeholders referenced by Storage/AlertService (full details in Diagram B)
  class Budget
  class OverspendingAlert
}

package "Persistence Layer" as PERSIST {
  interface Storage {
    + loadTransactions() : List<Transaction>
    + saveTransactions(txs: List<Transaction>) : void
    + loadBudgets() : List<Budget>
    + saveBudgets(budgets: List<Budget>) : void
  }

  class JsonStorage {
    - transactionsPath : Path
    - budgetsPath : Path
    --
    + JsonStorage(transactionsPath: Path, budgetsPath: Path)
    + loadTransactions() : List<Transaction>
    + saveTransactions(txs: List<Transaction>) : void
    + loadBudgets() : List<Budget>
    + saveBudgets(budgets: List<Budget>) : void
  }
}

package "Shared Utility" as UTIL {
  class Validator <<utility>> {
    {static} + validateTransaction(tx: Transaction) : void
    {static} + requireNotBlank(value: String, fieldName: String) : void
    {static} + requirePositive(amount: BigDecimal, fieldName: String) : void
    {static} + requireDate(date: LocalDate, fieldName: String) : void
  }
}

' -------------------------
' Relationships / Dependencies
' -------------------------

' Controller talks to services only (MVC)
TransactionsController ..> TransactionService : calls
TransactionsController ..> AlertService : triggers check\n(after add/edit)
note on link
checkOverspendingFor(tx) delegates to
checkBudgetStatus(category, month) (Diagram B)
end note

' Service owns business rules and persistence
TransactionService o-- "0..*" Transaction : cache
TransactionService ..> TransactionFilter : uses for filtering
TransactionService ..> Storage : load/save
TransactionService ..> Validator : validation (static)

' Persistence implementation
JsonStorage ..|> Storage : implements
Storage ..> Transaction : stores
Storage ..> Budget : stores

' Associations requested for clarity
Transaction --> Category : category
Transaction --> TransactionType : type

@enduml
